<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_create"
        android:shortcutId="create"
        android:shortcutLongLabel="@string/create_shortcut_long_label"
        android:shortcutShortLabel="@string/create_shortcut_short_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.myapplication.ComposeActivity"
            android:targetPackage="com.example.myapplication" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_menu_save"
        android:shortcutId="saved"
        android:shortcutLongLabel="@string/saved_shortcut_long_label"
        android:shortcutShortLabel="@string/saved_shortcut_short_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.myapplication.ComposeActivity"
            android:targetPackage="com.example.myapplication" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>