<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/drawableRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_drawables" />

                <RadioButton
                    android:id="@+id/textRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_text" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/section_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/text_to_send"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <EditText
                        android:id="@+id/text_to_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:hint="@string/enter_text"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/section_drawables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/select_drawable_text"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/drawablesRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_small">

                        </androidx.recyclerview.widget.RecyclerView>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/speed"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:typeface="normal" />

            <Spinner
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/mode"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:typeface="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/modeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardElevation="@dimen/card_elevation"
                        app:cardUseCompatPadding="true">

                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/effect_flash"
                            android:layout_width="100dp"
                            android:layout_height="90dp"
                            android:src="@drawable/ic_effect_flash" />

                    </androidx.cardview.widget.CardView>

                    <CheckBox
                        android:id="@+id/flash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/flash" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardElevation="@dimen/card_elevation"
                        app:cardUseCompatPadding="true">

                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/effect_marquee"
                            android:layout_width="100dp"
                            android:layout_height="90dp"
                            android:src="@drawable/ic_effect_marquee" />

                    </androidx.cardview.widget.CardView>

                    <CheckBox
                        android:id="@+id/marquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/marquee" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardElevation="@dimen/card_elevation"
                        app:cardUseCompatPadding="true">

                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/effect_invert"
                            android:layout_width="100dp"
                            android:layout_height="90dp"
                            android:src="@drawable/ic_effect_invert" />

                    </androidx.cardview.widget.CardView>

                    <CheckBox
                        android:id="@+id/invertLED"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/invertLED" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingLeft="@dimen/button_padding_left_right"
                        android:paddingRight="@dimen/button_padding_left_right"
                        android:text="@string/save_button" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/send_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/transfer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingLeft="@dimen/button_padding_left_right"
                        android:paddingRight="@dimen/button_padding_left_right"
                        android:text="@string/transfer_button" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>